istio/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  labels:
    app: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: dogeceptionpp123/devops_project
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Pod
metadata:
  name: redis2
  labels:
    app: redis
spec:
  volumes:
    - name: redis-data
      persistentVolumeClaim:
        claimName: redis-pvc

  containers:
    - name: redis
      image: redis
      ports:
        - containerPort: 6379
      volumeMounts:
        - mountPath: '/data'
          name: redis-data
