istio/app-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: appservice
spec:
  hosts:
    - '*'
  gateways:
    - app-gateway
  http:
    - match:
        - uri:
            exact: /helloworld
      route:
        - destination:
            host: 'appservice'
            port:
              number: 3000
