istio/destinationRule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: istio-destination
spec:
  host: server
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
